argocd/workloads/backend/namespace-mc-infra.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mc-infra
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    app.kubernetes.io/part-of: minecraft-platform
