argocd/workloads/backend/namespace-minecraft.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    app.kubernetes.io/part-of: minecraft-platform
