argocd/workloads/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-backend
  namespace: mc-infra
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/name: minecraft-backend
    app.kubernetes.io/part-of: minecraft-platform
spec:
  selector:
    app.kubernetes.io/name: minecraft-backend
  ports:
  - name: http
    port: 80
    targetPort: http
