argocd/workloads/backend/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: minecraft-backend-mtls-gateway
  namespace: mc-infra
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-mtls
      protocol: HTTPS
    hosts:
    - minecraft-api.charlie-cloud.me
    tls:
      mode: MUTUAL
      credentialName: minecraft-backend-mtls-cert
