argocd/workloads/backend/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minecraft-backend
  namespace: mc-infra
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  hosts:
  - minecraft-api.charlie-cloud.me
  gateways:
  - minecraft-backend-mtls-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: minecraft-backend.mc-infra.svc.cluster.local
        port:
          number: 80
